# starry

./: CMakeLists.txt  README.md
.VSCodeCounter/2024-11-10_03-48-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-11-22_03-28-40/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: acceptor.cpp.EF5D7F8ADF3EE662.idx  acceptor.h.962EF7F802ADD976.idx  add.cpp.EDCC28E2FFAFFFBE.idx  add.h.26B53EFE608F2747.idx  async_logger.cpp.01DE5CCA249FE869.idx  async_logger.cpp.8B7752795B00AFDA.idx  async_logger.cpp.C9A6EFBEAC6BF91B.idx  async_logger.cpp.DEE5C2A14FB875C8.idx  async_logging.h.02F316D46AAEBE78.idx  async_logging.h.49023142EDCD7FCC.idx  async_logging.h.7C3420CE0CFE8548.idx  async_logging.h.F5D7E83FB998A741.idx  buffer.cpp.78D399530BBF9753.idx  buffer.h.1A7F3D142EC7D976.idx  buffer_test.cpp.8292D88BC9C90F0D.idx  callbacks.h.E71983648017A075.idx  channel.cpp.68880FD112025A9C.idx  channel.cpp.8DC26FB2CE0BC9AA.idx  channel.h.4B3E624F5704F951.idx  channel.h.8A0B71D1109C725F.idx  channel_test.cpp.86495E2C5EF61713.idx  connector.h.7CEC80F350B29E53.idx  echo.cpp.5DD98AB1024055F2.idx  echo.h.40130986D5B974B2.idx  epoll_poller.cpp.70FA3FD4C92C68D9.idx  epoll_poller.cpp.82AAAD7117733CB8.idx  epoll_poller.h.8E5FC6C7659F45BD.idx  epoll_poller.h.A4A53B753E0926C6.idx  eventloop.cpp.AA8CE7B24DD1F843.idx  eventloop.cpp.C68358B38A0343BB.idx  eventloop.h.0D477A2BFCBC7600.idx  eventloop.h.BCA69314CA2FB0E0.idx  eventloop_test.cpp.D456C2F18CEAC559.idx  eventloop_thread.cpp.5C4F152C62B94601.idx  eventloop_thread.h.2413E6E51286B108.idx  eventloop_threadpool.cpp.15BB95F7C54B8FD3.idx  eventloop_threadpool.h.C0A1F78B3CB72265.idx  eventlopp.cpp.05785011E58B99E4.idx  inet_address.cpp.DE112C49EA8C4BF3.idx  inet_address.h.55C7DC06AAF160F4.idx  (+76 more)
base/log/include/: log_file.h
base/log/src/: async_logger.cpp  log_file.cpp
base/log/test/: CMakeLists.txt
base/noncopyable/: CMakeLists.txt
base/noncopyable/include/: noncopyable.h
cmake/: FindDependencies.cmake  ProjectSettings.cmake
core/: CMakeLists.txt
examples/: CMakeLists.txt
examples/rpc/: CMakeLists.txt
examples/rpc/echo/: CMakeLists.txt  echo_client.cpp  echo_server.cpp  echo_service_impl.h
examples/rpc/echo/client/: CMakeLists.txt  echo_client.cpp
examples/rpc/echo/proto/: echo_service.proto
examples/rpc/echo/protos/: CMakeLists.txt  echo.proto
examples/rpc/echo/server/: CMakeLists.txt  echo_server.cpp
examples/rpc/resolver/: CMakeLists.txt  client.cpp
examples/rpc/resolver/protos/: resolver.proto
examples/simple/: CMakeLists.txt
examples/simple/include/: echo.h
examples/simple/src/: echo.cpp  main.cpp
libs/: CMakeLists.txt
libs/copyable/: CMakeLists.txt
libs/copyable/include/: copyable.h
libs/log/: CMakeLists.txt
libs/log/include/: async_logging.h  log_stream.h  logging.h
libs/log/src/: logging.cpp
libs/log/test/: log_performance_test.cpp  logger_test.cpp
libs/thread_pool/: CMakeLists.txt
libs/thread_pool/include/: thread_pool.h
libs/thread_pool/test/: CMakeLists.txt  thread_pool_test.cpp
src/: CMakeLists.txt  main.cpp
starry/: CMakeLists.txt
starry/base/: CMakeLists.txt
starry/base/copyable/: CMakeLists.txt
starry/base/log/: CMakeLists.txt
starry/base/log/include/: async_logging.h  log_file.h  log_stream.h  logging.h
starry/base/log/src/: async_logger.cpp  log_file.cpp  logging.cpp
starry/base/log/test/: log_performance_test.cpp  logger_test.cpp
starry/base/thread_pool/test/: thread_pool_test.cpp
starry/net/: CMakeLists.txt
starry/net/include/: acceptor.h  buffer.h  callbacks.h  channel.h  connector.h  epoll_poller.h  eventloop.h  eventloop_thread.h  eventloop_threadpool.h  inet_address.h  poller.h  socket.h  sockets_ops.h  tcp_client.h  tcp_connection.h  tcp_server.h  timer.h  timer_id.h  timer_queue.h  types.h
starry/net/protobuf/: CMakeLists.txt
starry/net/protobuf/include/: protobuf_codeclite.h
starry/net/protobuf/src/: protobuf_codeclite.cpp
starry/net/protorpc/: CMakeLists.txt
starry/net/protorpc/include/: google-inl.h  rpc_channel.h  rpc_codec.h
starry/net/protorpc/src/: rpc_codec.cpp
starry/net/rpc/: CMakeLists.txt  codec.cpp  codec.h  cpp_service.h  gen.cpp  protobuf_codec_lite.cpp  protobuf_codec_lite.h  rpc.proto  rpc_channel.cpp  rpc_channel.h  rpc_closure.h  rpc_codec.cpp  rpc_codec.h  rpc_controller.cpp  rpc_controller.h  rpc_server.cpp  rpc_server.h  rpc_service.cpp  rpc_service.h  service.h
starry/net/rpc/proto/: rpc_message.proto
starry/net/rpc/protos/: rpcservice.proto
starry/net/rpc/test/: CMakeLists.txt  rpc_codec_test.cpp  rpc_controller_test.cpp
starry/net/rpc/tool/: CMakeLists.txt  cpp_plugin.cpp  cpp_plugin.h  cpp_service.cpp  cpp_service.h  gen.cpp
starry/net/src/: acceptor.cpp  buffer.cpp  channel.cpp  connector.cpp  epoll_poller.cpp  eventloop.cpp  eventloop_thread.cpp  eventloop_threadpool.cpp  eventlopp.cpp  inet_address.cpp  poller.cpp  socket.cpp  sockets_ops.cpp  tcp_client.cpp  tcp_connection.cpp  tcp_server.cpp  timer.cpp  timer_queue.cpp
starry/net/test/: CMakeLists.txt  buffer_test.cpp  inet_address_test.cpp  socket_test.cpp
test/: CMakeLists.txt
